microservices/evaluation/evaluation-k8s-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      name: evaluation-service-app
  template:
    metadata:
      labels:
        name: evaluation-service-app
    spec:
      containers:
      - name: application
        image: rendize/evaluation-service
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: account-configmap-volume
          mountPath: /etc/config
          readOnly: true
      volumes:
        - name: account-configmap-volume
          configMap:
            name: account-configmap

---
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
spec:
  selector:
    name: evaluation-service-app
  ports:
  - port: 80
    targetPort: 3000
