microservices/evaluation/evaluation-ingress-minion.yml
# Must be applied to the "evaluation" namespace
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: evaluation-ingress-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: api.rendize.com
    http:
      paths:
      - path: /evaluation/*
        backend:
          serviceName: evaluation-service
          servicePort: 80
